syntax = "proto3";

option go_package = "github.com/vottundev/vottun-qubic-bridge-go/grpc/proto";

package proto;

service RemoteService {
  rpc ProcessQubicOrder(ProcessOrderRequest) returns (ProcessOrderResponse) {}
}

message ProcessOrderRequest {
    uint64 OrderID = 1;        
	string OriginAccount = 2;     
	string DestinationAccount = 3; 
	string Amount = 4; 
}


message ProcessOrderResponse {
  bool message = 1;
}